--- a/sourse/pug/blocks/header-block/_header-block.scss
+++ b/sourse/pug/blocks/header-block/_header-block.scss
@@ -1,7 +1,10 @@
 
 
 .prm {
-  
+  .icon-calculator{
+    font-size: em(30);
+    margin-right: em(10);
+  }
   font-family: "PF Agora Slab Pro - Ultra Black";
 	.h1{
     
