--- a/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
+++ b/sourse/pug/blocks/s-portfolio/_s-portfolio.pug
@@ -1,6 +1,6 @@
 mixin s-portfolio()
 	// / .Works
-	section.section#works.scrollable&attributes(attributes)
+	section.section.scrollable&attributes(attributes)
 		+b.wrks
 			.d-lg-none.text-center
 				h2 Наши работы
@@ -32,7 +32,7 @@ mixin s-portfolio()
 				#tab1.wrks__tbs-itm
 					.arn-msnr
 						//- .cl-sizer.cl-1
-						+b.cl.cl-7.itm.img-bg(href="#")
+						+b.cl.cl-7.itm.img-bg(href="#" data-img="img/project-mob.jpg").full-modal-open-js
 							img.lazy-bg-js(src="#" data-src="img/project-1.jpg")
 							.itm__more
 								.ttl-bord
@@ -41,7 +41,7 @@ mixin s-portfolio()
 										span.thm.d-inline-block D-medical
 								button.btt.btt-blue(type="button")
 									span Нажмите для просмотра проекта
-						+b.cl.cl-5.itm.img-bg(href="#")
+						+b.cl.cl-5.itm.img-bg(href="#" data-img="img/project-mob.jpg").full-modal-open-js
 							img.lazy-bg-js(src="#" data-src="img/project-2.jpg")
 							.itm__more
 								.ttl-bord
@@ -55,7 +55,7 @@ mixin s-portfolio()
 									span Нажмите для просмотра проекта
 						.cl-7
 							.arn-msnr
-								+b.cl.cl-7.itm.ht6.img-bg(href="#")
+								+b.cl.cl-7.itm.ht6.img-bg(href="#" data-img="img/project-mob.jpg").full-modal-open-js
 									img.lazy-bg-js(src="#" data-src="img/project-3.jpg")
 									.itm__more
 										.ttl-bord
@@ -66,7 +66,7 @@ mixin s-portfolio()
 												| General Marketing
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
-								+b.cl.cl-5.itm.ht6.img-bg(href="#")
+								+b.cl.cl-5.itm.ht6.img-bg(href="#" data-img="img/project-mob.jpg").full-modal-open-js
 									img.lazy-bg-js(src="#" data-src="img/project-4.jpg")
 									.itm__more
 										.ttl-bord
@@ -79,7 +79,7 @@ mixin s-portfolio()
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						 
-								+b.cl.cl-7.itm.ht5.img-bg(href="#")
+								+b.cl.cl-7.itm.ht5.img-bg(href="#" data-img="img/project-mob.jpg").full-modal-open-js
 									img.lazy-bg-js(src="#" data-src="img/project-5.jpg")
 									.itm__more
 										.ttl-bord
@@ -91,7 +91,7 @@ mixin s-portfolio()
 												| General Marketing
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
-								+b.cl.cl-5.itm.ht5.img-bg(href="#")
+								+b.cl.cl-5.itm.ht5.img-bg(href="#" data-img="img/project-mob.jpg").full-modal-open-js
 									img.lazy-bg-js(src="#" data-src="img/project-7.jpg")
 									.itm__more
 										.ttl-bord
@@ -102,7 +102,7 @@ mixin s-portfolio()
 										button.btt.btt-blue(type="button")
 											span Нажмите для просмотра проекта
 						.cl-5.cl-5-right
-							+b.cl.cl-12.itm.ht4.img-bg(href="#")
+							+b.cl.cl-12.itm.ht4.img-bg(href="#" data-img="img/project-mob.jpg").full-modal-open-js
 								img.lazy-bg-js(src="#" data-src="img/project-7.jpg")
 								.itm__more
 									.ttl-bord
@@ -112,7 +112,7 @@ mixin s-portfolio()
 											|  для компании  Geroy
 									button.btt.btt-blue(type="button")
 										span Нажмите для просмотра проекта
-							+b.cl.cl-12.itm.img-bg(href="#")
+							+b.cl.cl-12.itm.img-bg(href="#" data-img="img/project-mob.jpg").full-modal-open-js
 								img.lazy-bg-js(src="#" data-src="img/project-8.jpg")
 								.itm__more
 									.ttl-bord
@@ -122,7 +122,7 @@ mixin s-portfolio()
 											| “Лабиринт”
 									button.btt.btt-blue(type="button")
 										span Нажмите для просмотра проекта
-						+b.cl.cl-7.itm.img-bg(href="#")
+						+b.cl.cl-7.itm.img-bg(href="#" data-img="img/project-mob.jpg").full-modal-open-js
 							img.lazy-bg-js(src="#" data-src="img/project-9.jpg")
 							.itm__more
 								.ttl-bord
