--- a/sourse/pug/blocks/s-servises/_s-servises.pug
+++ b/sourse/pug/blocks/s-servises/_s-servises.pug
@@ -1,6 +1,6 @@
 mixin s-servises()
 	// start s-servises
-	+b.SECTION.s-servises.section#s-servises&attributes(attributes)
+	+b.SECTION.s-servises.section&attributes(attributes)
 		.container
 			.section-title.text-center
 				h2 Наши услуги
