--- a/sourse/sass/_base.scss
+++ b/sourse/sass/_base.scss
@@ -567,3 +567,56 @@ body.page-next .crls__langs .text-white{
 		background-color: #ffffff;
 	}
 }
+ 
+
+.btt-close{
+	cursor: pointer;
+}
+
+
+
+$spinkit-size: 10em !default;
+$spinkit-spinner-color: $primary !default;
+
+// 2
+.sk-double-bounce {
+  width: $spinkit-size;
+  height: $spinkit-size;
+	// position: relative;
+	// position: absolute;
+	@include a-cent;
+  margin: auto;
+
+  .sk-child {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: $spinkit-spinner-color;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    animation: sk-double-bounce 2.0s infinite ease-in-out;
+  }
+
+  .sk-double-bounce-2 {
+    animation-delay: -1.0s;
+  }
+}
+
+@keyframes sk-double-bounce {
+  0%, 100% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.0);
+  }
+}
+
+
+.project-block-modal{
+	&__inner{
+		position: relative;
+		z-index: 2;
+	}
+}
