--- a/public/img/svg/_sprite.scss
+++ b/public/img/svg/_sprite.scss
@@ -29,6 +29,10 @@
 	font-size:(16/10)*1rem;
 	width:(25/16)*1em;
 }
+.icon-calculator {
+	font-size:(500/10)*1rem;
+	width:(500/500)*1em;
+}
 .icon-check {
 	font-size:(27/10)*1rem;
 	width:(27/27)*1em;
