--- a/sourse/pug/blocks/s-team/_s-team.scss
+++ b/sourse/pug/blocks/s-team/_s-team.scss
@@ -80,11 +80,15 @@
 		background-color: $primary;
 		@include media-breakpoint-up(xl) {
 			
-			padding: em(5) em(15);
-			border-radius: 20px 0;
+			padding: em(15) em(15);
+			border-radius: 30px 0;
 		}
-		border-radius: 30px 0;
-		padding: em(15) em(15);
+		@include media-breakpoint-up(lg) {
+			// margin-left: 0;
+			margin-right: 0;
+							}
+		border-radius: 20px 0;
+		padding: em(5) em(15);
 		max-width: 280px;
 		margin-right: auto;
 
@@ -105,11 +109,8 @@
 
 			margin-top: -130px;
 		}
-
-		@include media-breakpoint-up(lg) {
-
-			margin-top: -100px;
-		}
+ 
+		margin-top: 20px;
 	}
 
 	&__caption {
@@ -146,10 +147,12 @@
 
 		.section-title {
 			@include media-breakpoint-up(xxl) {
-
+				
 				margin-bottom: 80px;
 			}
+						@include media-breakpoint-up(xl) {
 			margin-bottom: 54px;
+						}
 		}
 	}
 
@@ -159,8 +162,9 @@
 		margin-bottom: 1em;
 	}
 
-	p {
-		color: $secondary;
+	p { 
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 	@include media-breakpoint-up(xl) {
@@ -183,12 +187,16 @@
 
 			min-height: 100vh;
 
-			@include media-breakpoint-up(xl) {
+			@include media-breakpoint-up(lg) {
 
-				padding-top: rem(40px);
 				display: flex;
 				flex-direction: column;
+				justify-content: center;
+			}
+			@include media-breakpoint-up(xl) {
 				justify-content: space-between;
+
+				padding-top: rem(40px);
 			}
 
 			padding-top: rem(80px);
