--- a/sourse/pug/blocks/s-content/_s-content.pug
+++ b/sourse/pug/blocks/s-content/_s-content.pug
@@ -3,7 +3,22 @@ mixin s-content()
 	+b.s-content.section#s-content&attributes(attributes)
 		.container
 			+b.section-title.text-center
-				h2 s-content
-				
-			.row
+				h1 Разработка 
+					span.text-primary мобильных 
+					| 
+					| приложений
+			+e.body
+				p. 
+					Уже сегодня каждый второй пользователь заходит в интернет с помощью мобильного
+					устройства, при этом они активно делают онлайн покупки в интернет-магазинах, ищут
+					и заказывают нужные услуги. Откройте для вашего бизнеса целую мобильную вселенную.
+					Многие организации и компании уже имеют собственные мобильные разаработки,
+					которые уже сегодня дают свои положительные результаты.
+				img.res-i(src="img/content-img-1.jpg", alt="")
+				+e.sub-title
+			
+				+e.btn.btn.btn-primary() sadadasds
+				+in-ch()
+					+e.text dfdfsdf
+				input(type='checkbox')
 	// end s-content
