--- a/sourse/pug/blocks/top-nav/_top-nav.pug
+++ b/sourse/pug/blocks/top-nav/_top-nav.pug
@@ -14,6 +14,24 @@ mixin top-nav()
 	// start top-nav
 	+b.top-nav
 		.container
-			+mnu()
+			.row
+				.col-auto
+					+e.logo.logo.crls__logo(href='#')
+						i.logo_main.wow.fadeInLeft
+						i.logo_name.wow.fadeInRight
+				.col
+					+mnu()
+				.col-auto
+					+e.soc.crls_scls.scls
+						a(href='https://www.facebook.com/DinoCSlive/', target='_blank')
+							i.icn.icn-fb
+						a(href='https://www.instagram.com/creative_studio_dino/', target='_blank')
+							i.icn.icn-inst
+						a(href='https://www.behance.net/DinoCreativeStudio/', target='_blank')
+							i.icn.icn-be
+						a(href='https://www.pinterest.com/dinocreativestudio/', target='_blank')
+							i.icn.icn-pint
+						a(href='https://www.linkedin.com/company/dino-creative-studio/', target='_blank')
+							i.icn.icn-ln
 					
 	// end top-nav
