--- a/sourse/pug/blocks/top-nav/_top-nav.scss
+++ b/sourse/pug/blocks/top-nav/_top-nav.scss
@@ -1,35 +1,55 @@
 .top-nav {
-	padding-top: 15px;
-	// position: absolute;
-	top: 100%;
-	// @include clearfix;ss
-	z-index: 20;
-	padding-top: 3px;
-	@include mt;
-	padding-bottom: 10px;
-	top: 0;
-	left: 0;
-	width: 100%;
+	padding-top: 15px; 
+	 
 
-	&.fixed {
-		width: 100vw;
-		bottom: auto;
-		margin-top: 0;
-		background-color: #fff;
-	}
 
-	&__nav {
-		text-align: center;
-		list-style-type: none;
-	}
-
-	&__item {
+	  &__item {
 		display: inline-block;
 		list-style-type: none;
 	}
+	&__soc{
+		filter: invert(.9);
+		opacity: 0.7;
+		flex-direction: row;
+	}
 
+	
+	.crls__logo .logo_main{
+		width: 111px;
+		height: 47px;
+	}
+	.crls__logo .logo_name {
+		width: 111px;
+		height: 8px;
+	}
 	// 
-	@include media-breakpoint-up(xl) {}
+	@media (min-width: 1200px){
+
+	}
+	@include media-breakpoint-up(xl) {
+		.container{
+			max-width: 1170px;
+		}
+	}
+	.row{
+		align-items: center;
+	}
+
+	&__link{
+		text-decoration: none !important;
+		&.active{
+			color: #ff7e07;
+		}
+	}
+	
+	&__nav { 
+		list-style-type: none;
+		font-size: rem(13);
+		padding-left: rem(70);
+		display: flex;
+		@include roww(15);
+		margin-bottom: 0;
+	}
 
 	@include media-breakpoint-up(lg) {}
 
