--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -1,4 +1,16 @@
 mixin footer()
-	+b.FOOTER.footer
+	+b.FOOTER.footer--light
 		.container
+			+e.soc.crls_scls.scls
+				a(href='https://www.facebook.com/DinoCSlive/', target='_blank')
+					i.icn.icn-fb
+				a(href='https://www.instagram.com/creative_studio_dino/', target='_blank')
+					i.icn.icn-inst
+				a(href='https://www.behance.net/DinoCreativeStudio/', target='_blank')
+					i.icn.icn-be
+				a(href='https://www.pinterest.com/dinocreativestudio/', target='_blank')
+					i.icn.icn-pint
+				a(href='https://www.linkedin.com/company/dino-creative-studio/', target='_blank')
+					i.icn.icn-ln
+			+e.copy ©  Dino 2018
 			//- | footer
