--- a/sourse/pug/blocks/s-content/_s-content.pug
+++ b/sourse/pug/blocks/s-content/_s-content.pug
@@ -2,23 +2,34 @@ mixin s-content()
 	// start s-content
 	+b.s-content.section#s-content&attributes(attributes)
 		.container
-			+b.section-title.text-center
-				h1 Разработка 
-					span.text-primary мобильных 
-					| 
-					| приложений
+			+b.section-title
+				h1 Разработка   мобильных   приложений
 			+e.body
-				p. 
-					Уже сегодня каждый второй пользователь заходит в интернет с помощью мобильного
-					устройства, при этом они активно делают онлайн покупки в интернет-магазинах, ищут
-					и заказывают нужные услуги. Откройте для вашего бизнеса целую мобильную вселенную.
-					Многие организации и компании уже имеют собственные мобильные разаработки,
-					которые уже сегодня дают свои положительные результаты.
-				img.res-i(src="img/content-img-1.jpg", alt="")
-				+e.sub-title
-			
-				+e.btn.btn.btn-primary() sadadasds
-				+in-ch()
-					+e.text dfdfsdf
-				input(type='checkbox')
+				+e.head
+					p. 
+						Уже сегодня каждый второй пользователь заходит в интернет с помощью мобильного
+						устройства, при этом они активно делают онлайн покупки в интернет-магазинах, ищут
+						и заказывают нужные услуги. Откройте для вашего бизнеса целую мобильную вселенную.
+						Многие организации и компании уже имеют собственные мобильные разаработки,
+						которые уже сегодня дают свои положительные результаты.
+					img.res-i(src="img/content-img-1.jpg", alt="")
+				+e.sub-title Основные этапы
+				ul
+					li
+						strong Бизнес-анализ.  
+						| 
+						.
+							В первую очередь нужно ответить на вопрос: «Зачем?». Каких целей вы планируете достигнуть с помощью мобильного приложения. Вы хотите продавать, или же хотите создать имиджевый проект? Не менее важно понять рынок, на котором действует клиент. Насколько активны конкуренты в сфере мобайл, что нравится целевой аудитории и какими приложениями она привыкла пользоваться. Все это важно, и на все эти вопросы нужно ответить прежде чем начать непосредственно разработку. На этом же этапе мы помогаем клиенту осуществить выбор мобильных платформ (разработка под ios, Android, Symbian, Windows Phone и др.)
+					li
+						strong Выработка.  
+						| После того, как цели проекта ясны, мы начинаем разработку мобильного интерфейса. 	Для этого наши специалисты сперва создают прототипы разделов будущего приложения, с учетом особенностей поведения пользователей именно с мобильными приложениями. Здесь много нюансов, 	и они отличны от проектирования веб-страниц. Позже прототипы передаются специалисту, который создает дизайн мобильных приложений.
+					li
+						strong Внедрение.  
+						| После того, как дизайн готов, приложение переходит в руки к разработчикам — и начинается программирование мобильных приложений. Специалисты внедряют все задуманное в жизнь, делая идеи реальностью. В разработке мобильных приложений мы используем передовые технологии, благодаря которым можно создать качественный проект за разумное время. Контроль и запуск. Теперь, когда функциональная часть работы завершена, мы проверяем приложения
+					li
+
+						strong Контроль и запуск. 
+						|  Теперь, когда функциональная часть работы завершена, мы проверяем приложения для мобильных устройств на качество и работоспособность. Когда продукт доведен до идеала, мы проводим размещение в App Store, если это мобильные приложения для ios, либо в Google Play, если это Android приложение. Безусловно, запуск приложения — это лишь начало, ведь теперь нужно поработать над тем, чтобы ваша ЦА узнала о нем и пользовалась им.
+
+			+e.btn.btt.btn-block.btt-blue(href="#") Смотреть все работы
 	// end s-content
