--- a/sourse/pug/blocks/s-form/_s-form.pug
+++ b/sourse/pug/blocks/s-form/_s-form.pug
@@ -32,8 +32,7 @@ mixin s-form()
 					a(href='#')
 						+icon("whatsapp")
 						//- i.icn.icn-wa
-		+b.footer.text-center.text-white
-			a.text-white.tdu(href="#") Политика конфиденциальности
-			br
-			| © 2009-2018 Dino Creative studio. All rights reserved.
+		
+		block
+
 	// end s-form
