--- a/sourse/pug/pages/index.pug
+++ b/sourse/pug/pages/index.pug
@@ -153,6 +153,10 @@ block pagecontent
 		+s-servises(class="")
 		+s-logos(class="")
 		+s-form(class="")
+			+b.footer.text-center.text-white
+				a.text-white.tdu(href="#") Политика конфиденциальности
+				br
+				| © 2009-2018 Dino Creative studio. All rights reserved.
 	//- +s-contact()
 	//- +footer()
 
