--- a/sourse/pug/pages/layout/main.pug
+++ b/sourse/pug/pages/layout/main.pug
@@ -63,8 +63,10 @@ html(lang="ru")
 		script(src="libs/fullPage.js/vendors/easings.min.js")
 		script(src="libs/fullPage.js/vendors/scrolloverflow.min.js")
 		script(src="libs/fullPage.js/fullpage.min.js") 
+		script(src="libs/imagesloaded.pkgd.min.js") 
 
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js")
+		script(src="libs/masonry/dist/masonry.pkgd.min.js")
 		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/smooth-scroll/10.2.1/js/smooth-scroll.min.js")
 		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js")
 		//- script(src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.3/owl.carousel.min.js")
