--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -41,6 +41,7 @@ $output-bourbon-deprecation-warnings: false;
 @import "../pug/blocks/s-team/_s-team";
 @import "../pug/blocks/s-servises/_s-servises";
 @import "../pug/blocks/s-logos/_s-logos";
+@import "../pug/blocks/s-blog/_s-blog";
 
 
 @import "../pug/blocks/s-form/s-form";
