--- a/public/img/svg/_sprite.scss
+++ b/public/img/svg/_sprite.scss
@@ -37,6 +37,14 @@
 	font-size:(27/10)*1rem;
 	width:(27/27)*1em;
 }
+.icon-clock {
+	font-size:(97.16/10)*1rem;
+	width:(97.16/97.16)*1em;
+}
+.icon-comments {
+	font-size:(392.89/10)*1rem;
+	width:(500/392.89)*1em;
+}
 .icon-email {
 	font-size:(19/10)*1rem;
 	width:(24/19)*1em;
