--- a/sourse/pug/blocks/s-servises/_s-servises.scss
+++ b/sourse/pug/blocks/s-servises/_s-servises.scss
@@ -136,6 +136,20 @@
 			max-width: 1360px;
 		}
 	}
+
+
+	&--page{
+		.section-title{
+			padding-bottom: rem(50);
+		}
+		@include media-breakpoint-up(lg) {
+
+			padding-bottom: rem(100);
+			padding-top: rem(100);
+		}
+		padding-bottom: rem(50);
+			padding-top: rem(50);
+	}
 	@include media-breakpoint-up(lg) {}
 	@include media-breakpoint-up(md) {}
 	@include media-breakpoint-up(sm) {}
