--- a/sourse/pug/blocks/s-blog/_s-blog.pug
+++ b/sourse/pug/blocks/s-blog/_s-blog.pug
@@ -28,14 +28,7 @@ mixin s-blog()
 				+item('1','бизнес','Построение базы подписчиков с pop-up окнами от студии Demi-Art')
 				+item('2','дизайн','10 советов UX - дизайнеру ')
 				+item('3','маркетинг','Построение базы подписчиков с pop-up окнами от студии Demi-Art')
-
-				+e.col.col-lg-4.col-sm-6.grid-item
-					+e.FORM.item--form
-						+e.caption--form
-							+e.title--form Будь в&nbsp;курсе наших новостей
-							+e.INPUT.input(type="email" required placeholder="Ваша почта")
-							+e.btn(type="submit")  Подписаться
-				// /+e.col.col-lg-4.col-sm-6.grid-item
+				block
 				+item('1','маркетинг','Построение базы подписчиков с pop-up окнами от студии Demi-Art')
 				+item('3','бизнес','Построение базы подписчиков с pop-up окнами от студии Demi-Art')
 				+item('1','бизнес','Построение базы подписчиков с pop-up окнами от студии Demi-Art')
