--- a/sourse/pug/blocks/s-content/_s-content.pug
+++ b/sourse/pug/blocks/s-content/_s-content.pug
@@ -1,3 +1,41 @@
+mixin s-content-2()
+	// start s-content
+	+b.s-content.section#s-content&attributes(attributes)
+		.container
+			+b.section-title
+				h1. 
+					Почему стоит проводить презентации проектов лично
+			+e.body
+				+e.head
+					p. 
+						С презентациями в работе сталкиваются все участники digital-проектов:от продукт-оунеров
+						и менеджеров до аналитиков и дизайнеров. Поговорим о том, почему все проезентации
+						нужно проводить лично
+					img.res-i(src="img/article-1.jpg", alt="")
+				+e.sub-title Имидж и забота о клиенте
+				p. 
+					Главная задача презентации — донести информацию до коллег и заказчиков.
+					Все члены команды должны уметь эффектно и убедительно представлять продукт.
+				p. 
+					Заказчик покупает у нас не только редизайн сайта или аналитическую экспертизу,
+					а клиентский сервис. Возможно, кто-то рекомендовал ему нашу команду, как хороших специалистов. Или заказчик видел наши работы или выступление на конференции,
+					и поэтому пригласил на проект.
+				p. 
+					Без личной презентации клиент может забраковать отличную концепцию. Или — выбрать слабое решение другой команды, которая все-таки смогла договориться о личной встрече..
+				p. 
+					Личная презентация повышает ценность работы, поэтому поможет в дальнейшем зарабатывать больше. Представьте, если бы Стив Джобс рассказывал об iPhone по электронной почте или веб-камере из дома, а не лично? Вряд ли это выглядело бы так эффектно.
+
+				+e.sub-title Внимание клиента
+				p. 
+					Самая большая ошибка — отправлять презентацию по электронной почте — письмо может потеряться среди других или попасть в спам. Но даже если клиент увидел ваше письмо, не ожидайте, что он отложит все дела и будет внимательно изучать ваши слайды.
+				p. 
+					Люди постоянно переключается между рабочими задачами и отвлекается на встречи
+					и обсуждения. Только вы лично можете сфокусировать его внимание.
+		+e.main
+			.container
+				img.res-i(src="img/article-2.jpg", alt="")
+	// end s-content
+
 mixin s-content()
 	// start s-content
 	+b.s-content.section#s-content&attributes(attributes)
