--- a/sourse/pug/blocks/s-content/_s-content.scss
+++ b/sourse/pug/blocks/s-content/_s-content.scss
@@ -19,8 +19,10 @@
 		@include media-breakpoint-up(xl) {
 			font-size: rem(34);
 		}
+		max-width: 635px;
 	}
 
+	
 	&__head{
 		max-width: 740px;
 	}
@@ -32,7 +34,14 @@
 	img{
 		margin-bottom: rem(65);
 	}
-
+	
+	&__main {
+		background-color: #fff;
+		img {
+			margin-bottom: 0;
+		}
+	}
+	
 	&__sub-title{
 		font-family: "PF Agora Slab Pro";
 		// font-size: rem(22px);
